--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div id="container" class="container">
-
-        </div>
+        <div id="container" class="container"></div>
         
         <div id="timer"></div>
 
