progress of work

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
+        <div class="progresso">
+            <span></span>
+        </div>
         <div id="container" class="container"></div>
         
         <div id="timer"></div>
@@ -16,6 +19,7 @@
             <button id="next" class="btn btn-secondary hidden">Next</button>
             <br>
             <button id="start" class="btn btn-primary hidden">Start challenge</button>
+            <br>
             <button id="finish" class="btn btn-primary hidden">Finish challenge</button>
         </nav>
 
