fixing broken result display

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <body>
         <input id="options-tgr" type="checkbox">
         <div class="menu-options">
-            <div class="options form-inline">
+            <div class="options _form-inline">
                 <div class="form-row">
-                    <!-- <div class="col-small-6"> -->
+                    <div class="col-small-6">
                         <p>Use this option to load questions form your computer or mobile</p>
                         <button id="load" class="btn btn-secondary">Load questions</button>
-                    <!-- </div> -->
+                    </div>
                 </div>
                 <div class="form-row">
-                    <!-- <div class="col-small-6"> -->
+                    <div class="col-small-6">
                         <p>Use this option to load questions CodeMarker cloud storage space</p>
                         <input id="retrieve-code" type="text" class="form-control col-sm-4" placeholder="type code">
                         <button id="retrieve" class="btn btn-secondary">Retrieve</button>
-                    <!-- </div> -->
+                    </div>
                 </div>
                 <label id="close-options" for="options-tgr" class="btn btn-secondary">Close options</label>
             </div>
