--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                         <button id="retrieve" class="btn btn-secondary">Retrieve</button>
                     </div>
                 </div>
+                <p>v0.04</p>
                 <label id="close-options" for="options-tgr" class="btn btn-secondary">Close options</label>
             </div>
         </div>
@@ -51,6 +52,7 @@
         </div>
 
         <script src="js/hammer.js"></script>
+        <script src="js/utils.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
