--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <span></span>
         </div>
         <div id="container" class="container"></div>
-        
+        <div id="select-exam"></div>
+
         <div id="timer"></div>
 
         <nav>
