--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="/favicon.png">
+        <meta name="theme-color" content="#ffffff"/>
+        <link rel="manifest" href="/manifest.json">
     </head>
     <body>
         <input id="options-tgr" type="checkbox">
