--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <link rel="stylesheet" href="css/main.css">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="/favicon.png">
+        <link rel="icon" href="favicon.png">
         <meta name="theme-color" content="#ffffff"/>
-        <link rel="manifest" href="/manifest.json">
+        <link rel="manifest" href="manifest.json">
     </head>
     <body>
         <input id="options-tgr" type="checkbox">
