--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </div>
 
         <script src="js/hammer.js"></script>
+        <script src="js/parser.js"></script>
         <script src="js/utils.js"></script>
         <script src="js/main.js"></script>
     </body>
