--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <button id="retrieve" class="btn btn-secondary">Retrieve</button>
                     </div>
                 </div>
-                <p>v0.05</p>
+                <p>v0.06</p>
                 <label id="close-options" for="options-tgr" class="btn btn-secondary">Close options</label>
             </div>
         </div>
@@ -43,11 +43,12 @@
             <button id="help" class="btn btn-disabled hidden">Answer(s)</button>
             <button id="next" class="btn btn-secondary hidden">Next</button>
             <br>
-            <button id="start" class="btn btn-primary hidden">Start challenge</button>
+            <button id="start" class="btn btn-primary hidden">Start</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <button id="finish" class="btn btn-primary hidden">Finish</button>
             <br>
-            <button id="finish" class="btn btn-primary hidden">Finish challenge</button>
+            
         </nav>
-        <label id="show-options" for="options-tgr" class="btn btn-secondary">Show options</label>
+        <label id="show-options" for="options-tgr" class="btn btn-secondary">Menu</label>
 
 
         <div id="loader" style="display: none;">
