--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
             <br>
             <button id="start" class="btn btn-primary hidden">Start</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <button id="finish" class="btn btn-primary hidden">Finish</button>
+            <button id="print" class="btn btn-primary hidden">Print all</button>
             <br>
             
         </nav>
-        <label id="show-options" for="options-tgr" class="btn btn-secondary">Menu</label>
+        <label id="show-options" for="options-tgr" class="btn btn-secondary visible">Menu</label>
 
 
         <div id="loader" style="display: none;">
