--- a/index.html
+++ b/index.html
@@ -133,6 +133,25 @@
             </div>
         </div>
 
+        <div class="modal fade" id="database-modal" tabindex="-1" role="dialog" aria-labelledby="database-modal-label" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="database-modal-label">Source info</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        ...
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div id="loader" style="display: none;">
             <input type="file" id="file-input" >
             <div id="file-content" style="display: none;"></div>
