--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
                     <div class="list-group-item list-group-item-action flex-column align-items-start">
                         <span>Use this action to back with current options to default settings.</span>
                         <div class="mb-2">
-                            <button id="default-settings" class="btn btn-primary">Reset all settings</button>
-                            <button id="remove-exams" class="btn btn-primary">Remove all exams</button>
+                            <button id="default-settings" class="btn btn-primary">Reset settings</button>
+                            <button id="remove-exams" class="btn btn-primary">Remove exams</button>
                         </div>
                         <div class="settings-messages"></div>
                     </div>
                 </div>
                 <p class="opts-header">Upload file</p>
                 <div class="list-group">
-                    <div id="version" class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="list-group-item list-group-item-action flex-column align-items-start">
                         <span>Use this option to load questions from your computer or mobile. File content must be in <a href="https://github.com/lukasz-jakub-adamczuk/codemarker#exam-format">special format</a> to be parsed with application.</span>
                         <div class="input-group mb-2">
                             <button id="load" class="btn btn-primary">Load your questions</button>
@@ -61,7 +61,7 @@
                 </div>
                 <p class="opts-header">Retrieve from internet</p>
                 <div class="list-group">
-                    <div id="version" class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="list-group-item list-group-item-action flex-column align-items-start">
                         <span>Use this option to load prepared questions from LearnWise cloud storage.</span>
                         <div class="input-group mb-2">
                             <input id="retrieve-code" type="text" class="form-control" placeholder="use code" aria-label="use code" aria-describedby="retrieve">
