change change change

--- a/index.html
+++ b/index.html
@@ -92,15 +92,19 @@
         </div>
 
         <nav id="menu" class="main-nav _hidden" style="display: none;">
-            <a id="prev-button" class="button prev disabled"><span>Prev</span></a>
-            <a id="start-button" class="button start disabled"><span>Start</span></a>
-            <a id="stop-button" class="button stop disabled"><span>Start</span></a>
-            <label id="show-options" for="options-tgr" class="button menu">
-                <a id="menu-button" class=""><span>Menu</span></a>
-            </label>
-            <a id="answers-button" class="button answers disabled"><span>Menu</span></a>
-            <a id="print-button" class="button print disabled"><span>Menu</span></a>
-            <a id="next-button" class="button next disabled"><span>Next</span></a>
+            <div class="container">
+                <div class="row justify-content-between">
+                    <a id="prev-button" href="#" class="button prev disabled"><span>Prev</span></a>
+                    <a id="start-button" class="button start disabled"><span>Start</span></a>
+                    <a id="stop-button" class="button stop disabled"><span>Start</span></a>
+                    <label id="show-options" for="options-tgr" class="button menu">
+                        <a id="menu-button" class=""><span>Menu</span></a>
+                    </label>
+                    <a id="answers-button" class="button answers disabled"><span>Menu</span></a>
+                    <a id="print-button" class="button print disabled"><span>Menu</span></a>
+                    <a id="next-button" href="#" class="button next disabled"><span>Next</span></a>
+                </div>
+            </div>
         </nav>
 
         <!-- Modals -->
