--- a/index.html
+++ b/index.html
@@ -175,12 +175,15 @@
         <script src="js/sha1.js"></script>
         <script src="js/parser.js"></script>
         <script src="js/utils.js"></script>
+        <script src="js/propertiesSetup.js"></script>
+        <script src="js/property.js"></script>
         <script src="js/properties.js"></script>
+        
         <script src="js/exam.js"></script>
         <script src="js/question.js"></script>
         <script src="js/answer.js"></script>
         <script src="js/codeMarker.js"></script>
         <script src="js/main.js"></script>
-        <script src="js/tests.js"></script>
+        <!-- <script src="js/tests.js"></script> -->
     </body>
 </html>
