--- a/index.html
+++ b/index.html
@@ -170,20 +170,28 @@
             <div id="file-content" style="display: none;"></div>
         </div>
 
+        <script>
+            'use strict';
+            var state;
+            var allExams = {};
+            var examsHashes = {};
+            var properties = {};
+        </script>
+
         <script src="js/hammer.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
         <script src="js/sha1.js"></script>
         <script src="js/parser.js"></script>
         <script src="js/utils.js"></script>
         <script src="js/propertiesSetup.js"></script>
-        <script src="js/property.js" type="module"></script>
-        <script src="js/properties.js" type="module"></script>
+        <script src="js/property.js"></script>
+        <script src="js/properties.js"></script>
         
         <script src="js/exam.js"></script>
         <script src="js/question.js"></script>
         <script src="js/answer.js"></script>
         <script src="js/codeMarker.js"></script>
-        <script src="js/main.js" type="module"></script>
+        <script src="js/main.js"></script>
         <!-- <script src="js/tests.js"></script> -->
     </body>
 </html>
