result details feature

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         </div>
         <div id="challenge" class="challenge container _hidden" style="display: none;"></div>
         <div id="result" class="result container _hidden" style="display: none;"></div>
+        <!-- <div id="result-details" class="result container _hidden" style="display: none;"></div> -->
 
         <div id="timer" style="display: none;">
             <span class="timer-content"></span>
@@ -179,6 +180,7 @@
         <script src="js/exam.js"></script>
         <script src="js/question.js"></script>
         <script src="js/answer.js"></script>
+        <script src="js/result.js"></script>
         <script src="js/codeMarker.js"></script>
         <script src="js/main.js"></script>
         <script src="js/tests.js"></script>
