additional features with keyboard support

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     <div class="list-group-item list-group-item-action flex-column align-items-start">
                         <span>Use this action to back with current options to default settings.</span>
                         <div class="mb-2">
-                            <button id="default-settings" class="btn btn-primary">Reset settings</button>
-                            <button id="remove-exams" class="btn btn-primary">Remove exams</button>
+                            <button id="default-settings" class="btn btn-secondary">Reset settings</button>
+                            <button id="remove-exams" class="btn btn-danger">Remove exams</button>
                         </div>
                         <div class="settings-messages"></div>
                     </div>
