--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./favicon.png">
         <meta name="theme-color" content="#ffffff"/>
+        <meta name="referrer" content="never" />
         <link rel="manifest" href="manifest.json">
         <!-- <link rel="stylesheet" href="bootstrap-4.0.0/dist/css/bootstrap.css"> -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -172,7 +173,8 @@
         </div>
 
         <script src="js/hammer.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> -->
+        <script src="js/marked.min.js"></script>
         <script src="js/sha1.js"></script>
         <script src="js/parser.js"></script>
         <script src="js/utils.js"></script>
