--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
         <link rel="manifest" href="manifest.json">
         <!-- <link rel="stylesheet" href="bootstrap-4.0.0/dist/css/bootstrap.css"> -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        
+        <!-- light theme -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/light.css">
+        <!-- dark theme -->
+        <!-- <link rel="stylesheet" href="css/darkly.css" disabled> -->
+        <link rel="stylesheet" href="css/dark.css" disabled>
+        <!-- gold theme -->
+        <link rel="stylesheet" href="css/gold.css" disabled>
+        
         <!-- <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Roboto&display=swap" rel="stylesheet"> -->
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46702001-2"></script>
@@ -176,6 +185,9 @@
         <!-- <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> -->
         <script src="js/marked.min.js"></script>
         <script src="js/sha1.js"></script>
+        <script src="js/langs/en.js"></script>
+        <script src="js/langs/pl.js"></script>
+        <script src="js/translations.js"></script>
         <script src="js/parser.js"></script>
         <script src="js/utils.js"></script>
         <script src="js/properties.js"></script>
